--- a/MyTicTacToe/style.scss
+++ b/MyTicTacToe/style.scss
@@ -23,6 +23,14 @@
   width: 40px;
   height: 55px;
   background-color: black;
+  justify-content: center;
+  display: flex;
+  align-items: center;
+}
+
+.scorenum {
+  color: green;
+  font-size: 2em;
 }
 
 .scorebox {
@@ -36,14 +44,27 @@
   height: 25px;
 }
 
-.printout {
+#input {
   width: 90%;
   margin-right: auto;
   margin-left: auto;
+  display: flex;
+  justify-content: space-around;
+}
+
+.printout {
   background-color: black;
   color: green;
   padding: 3px 5px;
   border-radius: 4px;
+}
+
+#compspeak {
+  width: 75%;
+}
+
+#dropdown {
+  text-align: center;
 }
 
 #status {
