--- a/Simonsays/styles.css
+++ b/Simonsays/styles.css
@@ -15,10 +15,43 @@
 
 .menubuts{
   margin: 10px 10px 5px 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   
   &:last-child {
     margin-right: 0;
   }
+}
+
+.menulight{
+  width: 20px;
+  height:20px;
+  border-radius: 50%;
+  border: 2px solid black;
+  box-shadow : 0px 2px 3px #222;
+  
+  &:active {
+    box-shadow : 0 1px 1px #292929;
+    top : -4px;
+  }
+}
+
+.redlight{
+  background: #ff0000 !important;
+}
+  
+.greenlight{
+  background: #00ff00 !important;
+}
+
+#startlight {
+  background: #893b3b;  
+}
+
+#strictlight {
+  background: #3b8941;  
 }
 
 #keys{
